setup/10-Tests/ingress-community-80.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-0
spec:
  ingressClassName: nginx
  rules:
  - host: test-0.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-0
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-1
spec:
  ingressClassName: nginx
  rules:
  - host: test-1.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-1
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-2
spec:
  ingressClassName: nginx
  rules:
  - host: test-2.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-2
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-3
spec:
  ingressClassName: nginx
  rules:
  - host: test-3.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-3
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-4
spec:
  ingressClassName: nginx
  rules:
  - host: test-4.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-4
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-5
spec:
  ingressClassName: nginx
  rules:
  - host: test-5.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-5
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-6
spec:
  ingressClassName: nginx
  rules:
  - host: test-6.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-6
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-7
spec:
  ingressClassName: nginx
  rules:
  - host: test-7.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-7
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-8
spec:
  ingressClassName: nginx
  rules:
  - host: test-8.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-8
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-9
spec:
  ingressClassName: nginx
  rules:
  - host: test-9.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-9
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-10
spec:
  ingressClassName: nginx
  rules:
  - host: test-10.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-10
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-10
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-10
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-10
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-11
spec:
  ingressClassName: nginx
  rules:
  - host: test-11.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-11
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-11
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-11
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-11
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-12
spec:
  ingressClassName: nginx
  rules:
  - host: test-12.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-12
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-12
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-12
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-12
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-13
spec:
  ingressClassName: nginx
  rules:
  - host: test-13.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-13
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-13
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-13
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-13
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-14
spec:
  ingressClassName: nginx
  rules:
  - host: test-14.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-14
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-14
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-14
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-14
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-15
spec:
  ingressClassName: nginx
  rules:
  - host: test-15.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-15
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-15
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-15
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-15
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-16
spec:
  ingressClassName: nginx
  rules:
  - host: test-16.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-16
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-16
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-16
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-16
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-17
spec:
  ingressClassName: nginx
  rules:
  - host: test-17.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-17
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-17
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-17
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-17
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-18
spec:
  ingressClassName: nginx
  rules:
  - host: test-18.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-18
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-18
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-18
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-18
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-19
spec:
  ingressClassName: nginx
  rules:
  - host: test-19.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-19
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-19
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-19
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-19
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-20
spec:
  ingressClassName: nginx
  rules:
  - host: test-20.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-20
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-20
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-20
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-20
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-21
spec:
  ingressClassName: nginx
  rules:
  - host: test-21.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-21
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-21
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-21
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-21
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-22
spec:
  ingressClassName: nginx
  rules:
  - host: test-22.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-22
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-22
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-22
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-22
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-23
spec:
  ingressClassName: nginx
  rules:
  - host: test-23.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-23
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-23
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-23
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-23
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-24
spec:
  ingressClassName: nginx
  rules:
  - host: test-24.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-24
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-24
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-24
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-24
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-25
spec:
  ingressClassName: nginx
  rules:
  - host: test-25.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-25
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-25
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-25
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-25
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-26
spec:
  ingressClassName: nginx
  rules:
  - host: test-26.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-26
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-26
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-26
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-26
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-27
spec:
  ingressClassName: nginx
  rules:
  - host: test-27.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-27
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-27
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-27
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-27
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-28
spec:
  ingressClassName: nginx
  rules:
  - host: test-28.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-28
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-28
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-28
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-28
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-29
spec:
  ingressClassName: nginx
  rules:
  - host: test-29.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-29
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-29
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-29
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-29
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-30
spec:
  ingressClassName: nginx
  rules:
  - host: test-30.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-30
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-30
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-30
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-30
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-31
spec:
  ingressClassName: nginx
  rules:
  - host: test-31.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-31
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-31
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-31
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-31
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-32
spec:
  ingressClassName: nginx
  rules:
  - host: test-32.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-32
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-32
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-32
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-32
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-33
spec:
  ingressClassName: nginx
  rules:
  - host: test-33.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-33
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-33
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-33
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-33
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-34
spec:
  ingressClassName: nginx
  rules:
  - host: test-34.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-34
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-34
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-34
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-34
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-35
spec:
  ingressClassName: nginx
  rules:
  - host: test-35.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-35
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-35
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-35
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-35
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-36
spec:
  ingressClassName: nginx
  rules:
  - host: test-36.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-36
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-36
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-36
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-36
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-37
spec:
  ingressClassName: nginx
  rules:
  - host: test-37.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-37
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-37
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-37
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-37
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-38
spec:
  ingressClassName: nginx
  rules:
  - host: test-38.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-38
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-38
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-38
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-38
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-39
spec:
  ingressClassName: nginx
  rules:
  - host: test-39.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-39
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-39
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-39
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-39
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-40
spec:
  ingressClassName: nginx
  rules:
  - host: test-40.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-40
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-40
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-40
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-40
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-41
spec:
  ingressClassName: nginx
  rules:
  - host: test-41.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-41
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-41
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-41
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-41
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-42
spec:
  ingressClassName: nginx
  rules:
  - host: test-42.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-42
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-42
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-42
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-42
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-43
spec:
  ingressClassName: nginx
  rules:
  - host: test-43.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-43
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-43
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-43
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-43
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-44
spec:
  ingressClassName: nginx
  rules:
  - host: test-44.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-44
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-44
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-44
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-44
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-45
spec:
  ingressClassName: nginx
  rules:
  - host: test-45.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-45
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-45
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-45
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-45
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-46
spec:
  ingressClassName: nginx
  rules:
  - host: test-46.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-46
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-46
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-46
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-46
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-47
spec:
  ingressClassName: nginx
  rules:
  - host: test-47.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-47
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-47
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-47
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-47
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-48
spec:
  ingressClassName: nginx
  rules:
  - host: test-48.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-48
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-48
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-48
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-48
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-49
spec:
  ingressClassName: nginx
  rules:
  - host: test-49.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-49
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-49
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-49
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-49
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-50
spec:
  ingressClassName: nginx
  rules:
  - host: test-50.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-50
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-50
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-50
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-50
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-51
spec:
  ingressClassName: nginx
  rules:
  - host: test-51.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-51
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-51
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-51
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-51
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-52
spec:
  ingressClassName: nginx
  rules:
  - host: test-52.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-52
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-52
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-52
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-52
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-53
spec:
  ingressClassName: nginx
  rules:
  - host: test-53.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-53
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-53
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-53
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-53
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-54
spec:
  ingressClassName: nginx
  rules:
  - host: test-54.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-54
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-54
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-54
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-54
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-55
spec:
  ingressClassName: nginx
  rules:
  - host: test-55.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-55
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-55
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-55
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-55
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-56
spec:
  ingressClassName: nginx
  rules:
  - host: test-56.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-56
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-56
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-56
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-56
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-57
spec:
  ingressClassName: nginx
  rules:
  - host: test-57.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-57
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-57
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-57
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-57
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-58
spec:
  ingressClassName: nginx
  rules:
  - host: test-58.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-58
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-58
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-58
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-58
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-59
spec:
  ingressClassName: nginx
  rules:
  - host: test-59.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-59
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-59
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-59
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-59
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-60
spec:
  ingressClassName: nginx
  rules:
  - host: test-60.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-60
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-60
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-60
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-60
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-61
spec:
  ingressClassName: nginx
  rules:
  - host: test-61.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-61
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-61
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-61
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-61
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-62
spec:
  ingressClassName: nginx
  rules:
  - host: test-62.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-62
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-62
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-62
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-62
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-63
spec:
  ingressClassName: nginx
  rules:
  - host: test-63.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-63
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-63
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-63
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-63
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-64
spec:
  ingressClassName: nginx
  rules:
  - host: test-64.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-64
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-64
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-64
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-64
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-65
spec:
  ingressClassName: nginx
  rules:
  - host: test-65.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-65
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-65
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-65
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-65
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-66
spec:
  ingressClassName: nginx
  rules:
  - host: test-66.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-66
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-66
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-66
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-66
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-67
spec:
  ingressClassName: nginx
  rules:
  - host: test-67.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-67
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-67
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-67
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-67
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-68
spec:
  ingressClassName: nginx
  rules:
  - host: test-68.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-68
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-68
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-68
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-68
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-69
spec:
  ingressClassName: nginx
  rules:
  - host: test-69.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-69
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-69
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-69
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-69
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-70
spec:
  ingressClassName: nginx
  rules:
  - host: test-70.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-70
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-70
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-70
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-70
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-community-71
spec:
  ingressClassName: nginx
  rules:
  - host: test-71.f5demo.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-svc-71
            port:
              number: 80
      - path: /path2
        pathType: Prefix
        backend:
          service:
            name: app-svc-71
            port:
              number: 80
      - path: /path3
        pathType: Prefix
        backend:
          service:
            name: app-svc-71
            port:
              number: 80
      - path: /path4
        pathType: Prefix
        backend:
          service:
            name: app-svc-71
            port:
              number: 80

---
